[tool.poetry]
name = "hello-langserve"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
uvicorn = "^0.23.2"
langserve = {extras = ["server"], version = ">=0.0.30"}
python = ">=3.10,<3.13"

langchain-core = "^0.3.0"
langchain-community = "^0.3.0"
langgraph = "^0.2.22"
langchain-openai = "^0.2.0"
langchain-anthropic = "^0.2.0"
python-dotenv = "^1.0.1"
numpy = "1.26.*"
faiss-cpu = "^1.8.0.post1"
pydantic-settings = "^2.5.2"
retry = "^0.9.2"
decorator = "4.4.2"

[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
